<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.CourseDetailsActivity">

    <ScrollView
        android:id="@+id/detailsScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <Spinner
                    android:id="@+id/statusSpinner"
                    android:layout_width="409dp"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="373dp" />
                <TextView
                    android:labelFor="@+id/termIdInput"
                    android:id="@+id/termIdLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/term_id"
                    tools:layout_editor_absoluteX="66dp"
                    tools:layout_editor_absoluteY="138dp" />
                <EditText
                    android:id="@+id/termIdInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="" />

                <TextView
                    android:labelFor="@+id/courseStatusInput"
                    android:id="@+id/courseStatusLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_status"
                    tools:layout_editor_absoluteX="66dp"
                    tools:layout_editor_absoluteY="106dp" />
                <EditText
                    android:id="@+id/courseStatusInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:labelFor="@+id/courseTitleInput"
                    android:id="@+id/courseTitleLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_title"
                    tools:layout_editor_absoluteX="66dp"
                    tools:layout_editor_absoluteY="138dp" />
                <EditText
                    android:id="@+id/courseTitleInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:labelFor="@+id/courseStartInput"
                    android:id="@+id/courseStartLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_start"
                    tools:layout_editor_absoluteX="145dp"
                    tools:layout_editor_absoluteY="138dp" />
                <EditText
                    android:id="@+id/courseStartInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="" />

                <TextView
                    android:labelFor="@+id/courseEndInput"
                    android:id="@+id/courseEndLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_end"
                    tools:layout_editor_absoluteX="66dp"
                    tools:layout_editor_absoluteY="106dp" />

                <EditText
                    android:id="@+id/courseEndInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <Spinner
                    android:id="@+id/instructorIdSpinner"
                    android:layout_width="409dp"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="373dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:labelFor="@+id/courseInstructorInput"
                    android:id="@+id/courseInstructorLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instructor"
                    tools:layout_editor_absoluteX="66dp"
                    tools:layout_editor_absoluteY="106dp" />
                <EditText
                    android:id="@+id/courseInstructorInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:labelFor="@+id/courseNotesInput"
                    android:id="@+id/courseNotesLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_notes"
                    tools:layout_editor_absoluteX="66dp"
                    tools:layout_editor_absoluteY="106dp" />
                <EditText
                    android:id="@+id/courseNotesInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabCheckSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:onClick="onCheckSaveClick"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/ic_baseline_check_circle_24" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddAssessment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_circle_24" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/assessmentsRV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/detailsScroll"
        app:layout_constraintLeft_toLeftOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>